# memguard-mcp

./: .gitattributes  .gitignore  Cargo.toml  LICENSE  MCP（Model Context Protocol）开发与调试白皮书.md  QUICKREF.md  README.md  RELEASE.md  architecture.md  blueprint.md  build.ps1  build.sh  memguard.md  opencode.json.example
.github/workflows/: release.yml
npm/: README.md  cli.js  install.js  package.json
src/: main.rs  models.rs
src/cli/: cleanup.rs
src/engine/: mod.rs  projection.rs  state_manager.rs  validator.rs
src/engine/validators/: adr_active_conflict.rs  adr_invalid_transition.rs  adr_rejected_repeat.rs  duplicate_task_id.rs  empty_task_id.rs  mod.rs  superseded_by_required.rs  task_terminal_transition.rs
src/mcp/: server.rs
src/search/: index.rs  mod.rs  scorer.rs
